--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="cover cover-final">
     
     <div class="container">
-        <h2>Поздравляем победителей!</h2>
-        <p class="cover__text">Спасибо всем за&nbsp;участие! С&nbsp;наступающим!</p>
+        <h2>Поздравляем победителей</h2>
+        <p class="cover__text">Спасибо всем за&nbsp;участие и с&nbsp;наступающим!</p>
         <div class="row content-center">
             <div class="leaderboard col-lg-8">
                 <table>
